--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ out/
 
 # Gradle files
 .gradle/
+gradle/
 /build/
 /captures
 
@@ -35,7 +36,7 @@ captures/
 
 # IntelliJ
 *.iml
-/.idea/
+.idea/
 
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
@@ -58,3 +59,7 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
+
+#gradlew
+gradlew
+gradlew.bat
