--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ out/
 
 # Gradle files
 .gradle/
-./gradle/*
+gradle/
 /build/
 /captures
 
@@ -36,7 +36,7 @@ captures/
 
 # IntelliJ
 *.iml
-./.idea/*
+.idea/
 
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
@@ -59,7 +59,3 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
-
-#gradlew
-./gradlew
-./gradlew.bat
