--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,9 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
 
     // Firebase components
-    implementation 'com.google.firebase:firebase-core:17.2.0'
+    implementation 'com.google.firebase:firebase-core:17.2.1'
     implementation 'com.google.firebase:firebase-auth:19.1.0'
+    implementation 'com.google.firebase:firebase-storage:19.1.0'
 
     // Google Auth
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
@@ -53,14 +54,11 @@ dependencies {
     //Image
     implementation 'com.squareup.picasso:picasso:2.71828'
 
-    //Times Formater
-    implementation 'org.ocpsoft.prettytime:prettytime:4.0.1.Final'
-
     //Json Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
     implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
 
     //Loading View
     implementation 'io.saeid:fab-loading:1.0.0'
